<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/a_nova_tend_ncia_do_mercado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_term"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:maxLines="3"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@id/main_term"
        app:layout_constraintEnd_toEndOf="@id/main_term"
        app:layout_constraintStart_toStartOf="@id/main_term"
        app:layout_constraintTop_toTopOf="@id/main_term" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/clipboard"
        android:padding="8dp"
        android:src="@drawable/clipboard_ic_foreground"
        app:layout_constraintBottom_toBottomOf="@id/main_term"
        app:layout_constraintEnd_toEndOf="@id/main_term"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/main_term"
        app:layout_constraintTop_toTopOf="@id/main_term"
        app:layout_constraintVertical_bias="1"
        app:tint="@color/alien_green_darker" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_trend"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:text="@string/nova_trend"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/new_adjective"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/novo_adjetivo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/new_trend"
        app:layout_constraintStart_toStartOf="@id/new_trend"
        app:layout_constraintTop_toBottomOf="@id/new_trend" />

    <Button
        android:id="@+id/new_noun"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/novo_substantivo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/new_adjective"
        app:layout_constraintStart_toStartOf="@id/new_adjective"
        app:layout_constraintTop_toBottomOf="@id/new_adjective" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/socialism"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>